blockade (20.12.10-2005) ubuntu; urgency=medium

  * Manage config when upgrading blockade version passed current.
  * Some more fixes.
  * Update changelog.
  * Manpage updated to reflect GPL license change.

 -- Michael L. Schaecher <MichaelSchaecher@myangrytech.com>  Thu, 10 Dec 2020 22:37:59 -0700

blockade (20.12.10-1146) ubuntu; urgency=medium

  * Fixed essues with setting refresh interval.

 -- Michael L. Schaecher <MichaelSchaecher@myangrytech.com>  Thu, 10 Dec 2020 11:49:35 -0700

blockade (20.12.08-2106) ubuntu; urgency=medium

  * Complete rewrite of main scripts.

 -- Michael L. Schaecher <MichaelSchaecher@myangrytech.com>  Tue, 08 Dec 2020 21:07:16 -0700

blockade (2.32.0) ubuntu; urgency=medium

  * Fixed man page refurring to nonexisting commands.
  * Version bump.
  * Some fixes (cat was pointing to none existing file).

 -- Michael L. Schaecher <MichaelSchaecher@myangrytech.com>  Tue, 25 Aug 2020 14:31:04 -0600

blockade-2.30.2 (2.30.2) ubuntu; urgency=medium

  * Fix some typo's and misspellings.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sun, 23 Aug 2020 23:23:14 -0600

blockade-2.24.0 (2.24.0) ubuntu; urgency=medium

  * Manpage add for better help info.
  * deb package install pionted to the wrong directory.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sun, 05 Jul 2020 00:27:12 -0600

blockade-2.20.7 (2.20.7) ubuntu; urgency=medium

  * Add option to edit /etc/hosts and clean up.
  * Version bump to 2.*

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sat, 04 Jul 2020 01:38:56 -0600

blockade-1.20.27.36 (1.20.27.36) ubuntu; urgency=medium

  * Better changelog management.
  * Show info based on systemctl status instead of unneeded files.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Tue, 30 Jun 2020 10:26:51 -0600

blockade-1.20.6-24.11 (1.20.6-24.11) ubuntu; urgency=medium

  * Version bump.

 -- Michael L. Schaecher <mschaecher78@gmail.com>  Sat, 27 Jun 2020 18:12:08 -0600
