@@ -1,89 +1,0 @@
-#!/bin/bash
-
-set -e
-
-# Create to needed directories this short and simple way.
-mkdir -p debian/${name}/{${deb},${fil},${man},${doc},${lib},${bin},${ser}}
-
-# Debian style changelog'
-changelog=$(cat changelog)
-
-# the ".git/COMMIT_EDITMSG" file to edit the changelog, but only do
-# if there is a new commit.
-if [ -f .git/COMMIT_EDITMSG ] ; then
-	last_commit=$(cat .git/COMMIT_EDITMSG)
-fi
-
-new_changelog=$(cat <<EOF
-${name} (${version}) ubuntu; urgency=medium
-
-  * ${last_commit}
-
- -- ${DEBFULLNAME} <${DEBEMAIL}>  $(date -R)
-
-${changelog}
-EOF
-)
-
-if grep "${last_commit}" changelog > /dev/null ; then
-	cp changelog debian/changelog
-else
-	echo "${new_changelog}" > debian/changelog
-	cp -f debian/changelog changelog
-fi
-
-# Avoid using cp to copy the main script because the version needs
-# to be set.
-sed "22iversion=\"${version}\"			# Version code is date/time related." src/blockade > \
-	debian/${name}/${bin}/${name}
-
-# Copy the systemctl services and general files.
-cp -vf src/ser/blockade-hosts-update.* debian/${name}/${ser}/
-cp -vf data/doc/* debian/${name}/${fil}/
-cp -vf COPYING debian/${name}/${doc}/copyright
-cp -f debian/changelog debian/${name}/${doc}/changelog
-
-# Compass the changelog.
-if gzip -9 -f debian/${name}/${doc}/changelog ; then
-	echo "debian/changelog > debian/${name}/${doc}/changelog.gz"
-fi
-
-pandoc data/man/${name}.1.md -s -t man -o debian/${name}/${man}/${name}.1
-if gzip -9 -f debian/${name}/${man}/${name}.1 ; then
-	echo "debian/${name}/${man}/${name}.1 > debian/${name}/${man}/${name}.1.gz "
-fi
-
-# Generate a control file
-cat <<EOF > debian/control
-Source: ${name}
-Section: networking
-Priority: optional
-Maintainer: ${DEBFULLNAME} <${DEBEMAIL}>
-Build-Depends: cp, gzip, wget, dpkg
-Homepage: https://www.github.com/mschaecher78/blockade/
-
-Package:${name}
-Architecture: all
-Depends: wget, systemd
-Description: Update hosts
- Using Steven Black's' github hosts project. This enables
- the hosts to be used to manage security while surfing the web.
-EOF
-
-tree=$(pwd) && cd debian/${name}
-
-find . -type f ! -path './DEBIAN/*' -printf '%P\0' | xargs -r0 md5sum > DEBIAN/md5sums
-
-cd ${tree} && cp -vf src/tools/* debian/${name}/${deb}
-
-# Fix ownership and permissions
-chown -R root:root "debian/${name}"
-chmod -R go-w "debian/${name}"
-# in case we are in a restrictive umask environment like 0077
-chmod -R a+rX "debian/${name}"
-# Set permission for main script
-chmod a+x debian/${name}/${bin}/${name}
-
-if dpkg-gencontrol -p${name} -P"debian/${name}" ; then
-	dpkg-deb --build debian/${name} ..
-fi
